[package]
name = "svix_task_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies]
time = { version = "0.3.21", features = ["macros"] }
reqwest = { version = "0.11", features = [] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12.0", features = ["unstable"] }
rand = "0.8.5"
async-trait = "0.1.68"
deadpool-sqlite = {version = "0.5.0", features = ["rt_async-std_1", "rt_tokio_1", "serde"]}
warp = "0.3"
serde = "*"
serde_json = "*"
serde_derive = "*"